# 06-Segmentations

./: 03.1 Iter1_K_Means.ipynb  Model Tracking.md  README.md  pyproject.toml
data/processed/: capped.csv  capped_2.csv  preprocessed_bank.csv  preprocessed_bank_2.csv  target.csv  target_2.csv
notebooks/: 0 The EDA.ipynb  0.2 The EDA - Additional.ipynb  01 Pre-Process.ipynb  01.1 K-Means++ 3F.ipynb  01.1 Pre-Process.ipynb  01.2 Pre - Process II.ipynb  02 Pre - Process II.ipynb  02.1 Pre-Process_2.ipynb  02.2 Pre-Process__2 II.ipynb  03.1 Iter1_K_Means.ipynb  03.2 Iter1_GMM.ipynb  04 Summary.ipynb  04.Feat. Selection.ipynb  1 First Iteration.ipynb  test.ipynb
